--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,12 +2,30 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+
+        <title>{% block title %}Блог{% endblock %}</title>
+
+        {% block stylesheets %}
+            <link href="{{ asset('vendor/bootstrap/dist/css/bootstrap.min.css') }}" media="all" rel="stylesheet" type="text/css" />
+        {% endblock %}
+
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+
+        {% include "_partials_navbar.html.twig" %}
+
+        <div class="container">
+
+            {% block content %}{% endblock %}
+        </div>
+
+        {% include "_partials_footer.html.twig" ignore missing %}
+
+        {% block javascripts %}
+            <script src="{{ asset('vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+        {% endblock %}
+
     </body>
 </html>
