Added Twig extension (add_ellipsis filter)

--- a/src/Olenaza/BlogBundle/Resources/views/Post/_partials_posts_list.html.twig
+++ b/src/Olenaza/BlogBundle/Resources/views/Post/_partials_posts_list.html.twig
@@ -5,7 +5,7 @@
                 <div class="panel-heading">
                     <li><a href="{{ path('post_show', {'slug': post.slug}) }}">{{ post.title|upper }}</a></li>
                 </div>
-                <div class="panel-body">{{ post.beginning }}</div>
+                <div class="panel-body">{{ post.beginning | trim('.') | add_ellipsis }}</div>
             </div>
         </div>
     </div>
