--- a/src/Olenaza/BlogBundle/Resources/views/post/tag_form.html.twig
+++ b/src/Olenaza/BlogBundle/Resources/views/post/tag_form.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <h1>Створи новий пост</h1>
+    <h1>Створи новий тег</h1>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
