--- a/src/Olenaza/BlogBundle/Resources/views/welcome/welcome_page.html.twig
+++ b/src/Olenaza/BlogBundle/Resources/views/welcome/welcome_page.html.twig
@@ -5,7 +5,7 @@
     <h3>
         <p>Останні опубліковані пости</p>
         <br>
-        {% include "OlenazaBlogBundle:Post:_partials_posts_list.html.twig" %}
+        {% include "OlenazaBlogBundle:post:_partials_posts_list.html.twig" %}
 
         <p>Нові фотоальбоми</p>
     </h3>
