--- a/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
+++ b/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
@@ -7,18 +7,29 @@
     {% include "OlenazaBlogBundle::_partials_edit_buttons.html.twig" %}
 
     <h3>{{ post.title }}</h3>
-    <br><hr>
+    <hr>
     <div>{{ post.text }}</div>
 
-    {% if post.tags %}
-        <br>
-        <h4>Теги:</h4>
-        <ul>
-            {% for tag in post.tags %}
+    <h4>Теги:</h4>
+    <ul>
+        {% for tag in post.tags %}
 
-                <li>{{ tag.name }}</li>
+            <li>{{ tag.name }}</li>
+
+        {% endfor %}
+    </ul>
+    {% if post.comments %}
+        <br>
+        <h4>Коментарі:</h4>
+        <ul>
+            {% for comment in post.comments %}
+
+                <li>{{ comment.text }}</li>
 
             {% endfor %}
         </ul>
     {% endif %}
+    <br>
+    {{ form(form) }}
+
 {% endblock %}
