--- a/src/Olenaza/BlogBundle/Resources/views/about/index.html.twig
+++ b/src/Olenaza/BlogBundle/Resources/views/about/index.html.twig
@@ -4,5 +4,5 @@
 
     <h3>Інформація про автора</h3>
 
-    <p>{{ info | default('Інформація про автора покищо відсутня') }}</p>
+    <p>{{ about.text }}</p>
 {% endblock %}
