--- a/app/Resources/views/_partials_navbar.html.twig
+++ b/app/Resources/views/_partials_navbar.html.twig
@@ -1,23 +1,22 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <!-- Collapsed Hamburger -->
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#app-navbar-collapse">
+                <span class="sr-only">Toggle Navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+                <!-- Branding Image -->
+            <a class="navbar-brand" href="{{ path('welcome') }}">
+                Блог
+            </a>
+        </div>
 
-    <div class="navbar-header">
-
-        <!-- Collapsed Hamburger -->
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#app-navbar-collapse">
-            <span class="sr-only">Toggle Navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-
-        <!-- Branding Image -->
-        <a class="navbar-brand" href="{{ path('welcome') }}">
-            Блог
-        </a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="app-navbar-collapse">
-        {{ knp_menu_render('main') }}
+        <div class="collapse navbar-collapse" id="app-navbar-collapse">
+            {{ knp_menu_render('main') }}
+        </div>
     </div>
 </nav>
 
