--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>{% block title %}Блог{% endblock %}</title>
 
@@ -12,7 +13,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 
     </head>
-    <body>
+    <body style="margin-top:50px; margin-bottom:50px;">
 
         {% include "_partials_navbar.html.twig" %}
 
@@ -25,6 +26,8 @@
 
         {% block javascripts %}
             <script src="{{ asset('vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+            <script src="{{ asset('vendor/jquery/dist/jquery.min.js') }}"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         {% endblock %}
     </body>
 </html>
