--- a/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
+++ b/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
@@ -7,12 +7,14 @@
     <h3>{{ post.title }}</h3>
     <hr>
     <div>{{ post.text }}</div>
-
+    <br>
     <h4>Теги:</h4>
     <ul>
         {% for tag in post.tags %}
 
-            <li>{{ tag.name }}</li>
+            <li>
+                <a href="{{ path('posts_list_by_tag', {'tagName': tag.name}) }}">{{ tag.name }}</a>
+            </li>
 
         {% endfor %}
     </ul>
