--- a/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
+++ b/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+    <h4>{{ wo_render_breadcrumbs({separator: ''}) }}</h4>
+
     <h3>{{ post.title }}</h3>
     <hr>
     <div>{{ post.text }}</div>
@@ -13,7 +15,7 @@
         {% for tag in post.tags %}
 
             <li>
-                <a href="{{ path('posts_list_by_tag', {'tagName': tag.name}) }}">{{ tag.name }}</a>
+                <a href="{{ path('posts_list_by_tag', {'name': tag.name}) }}">{{ tag.name }}</a>
             </li>
 
         {% endfor %}
