--- a/app/Resources/views/_partials_navbar.html.twig
+++ b/app/Resources/views/_partials_navbar.html.twig
@@ -36,17 +36,17 @@
                 <ul class="nav navbar-nav navbar-right">
                     {% if is_granted('ROLE_USER') %}
                         <li><a href="{{ path('fos_user_profile_show') }}">
-                                <span class="glyphicon glyphicon-user"></span> Profile</a>
+                                <span class="glyphicon glyphicon-user"></span> Профіль: {{ app.user.username }}</a>
                         </li>
                         <li><a href="{{ path('fos_user_security_logout') }}">
-                                <span class="glyphicon glyphicon-log-out"></span> Log out</a>
+                                <span class="glyphicon glyphicon-log-out"></span> Вийти</a>
                         </li>
                     {% else %}
                         <li><a href="{{ path('fos_user_registration_register') }}">
-                                <span class="glyphicon glyphicon-user"></span> Sign Up</a>
+                                <span class="glyphicon glyphicon-user"></span> Зареєструватися</a>
                         </li>
                         <li><a href="{{ path('fos_user_security_login') }}">
-                                <span class="glyphicon glyphicon-log-in"></span> Log in</a>
+                                <span class="glyphicon glyphicon-log-in"></span> Увійти</a>
                         </li>
                     {% endif %}
                 </ul>
