--- a/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
+++ b/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
@@ -20,10 +20,8 @@
 
         {% endfor %}
     </ul>
-
-    <form action="{{ path('post_like', {'slug': post.slug, 'username': app.user.username}) }}">
-        <button type="submit" class="btn btn-default">Вподобати</button>
-    </form>
+    <br>
+    {{ form(likeForm) }}
 
     {% if post.comments %}
         <br>
@@ -47,6 +45,6 @@
         </div>
     {% endif %}
     <br>
-    {{ form(form) }}
+    {{ form(commentForm) }}
 
 {% endblock %}
