--- a/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
+++ b/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
@@ -34,6 +34,8 @@
 
                     <div class="panel-heading">
 
+                        {{ comment.user }}
+
                         {{ comment.updatedAt is empty ?
                             ["Опублікований: ", comment.publishedAt|date("d/m/Y")]|join :
                             ["Відредагований: ", comment.updatedAt|date("d/m/Y")]|join}}
@@ -45,6 +47,10 @@
         </div>
     {% endif %}
     <br>
-    {{ form(commentForm) }}
+    {% if commentForm is defined %}
+        {{ form(commentForm) }}
 
+    {% else %}
+        <h4>! Будь ласка, авторизуйтесь, щоб залишити коментар.<h4>
+    {% endif %}
 {% endblock %}
