Added CheckPublished console command, started FOSRestBundle

--- a/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
+++ b/src/Olenaza/BlogBundle/Resources/views/post/post_show.html.twig
@@ -29,6 +29,6 @@
         {{ form(commentForm) }}
 
     {% else %}
-        <h4>! Будь ласка, авторизуйтесь, щоб залишити коментар.<h4>
+        <h4>! Будь ласка, авторизуйтесь, щоб залишити коментар.</h4>
     {% endif %}
 {% endblock %}
