--- a/app/Resources/views/_partials_navbar.html.twig
+++ b/app/Resources/views/_partials_navbar.html.twig
@@ -21,16 +21,13 @@
                 </div>
             </div>
             <div class="col-sm-3 col-md-3">
-                <form action="{{ path('posts_search') }}" class="navbar-form navbar-left">
+                <div class="navbar-form navbar-left">
                     <div class="input-group">
-                        <input type="text" class="form-control" name="fragment" placeholder="Пошук за фрагментом">
-                        <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit">
-                                <i class="glyphicon glyphicon-search"></i>
-                            </button>
-                        </div>
+                        {{ searchText is defined ?
+                            render(controller('OlenazaBlogBundle:Post:search'), {'searchText': searchText}) :
+                            render(controller('OlenazaBlogBundle:Post:search')) }}
                     </div>
-                </form>
+                </div>
             </div>
             <div class="col-sm-3 col-md-3">
                 <ul class="nav navbar-nav navbar-right">
