--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -5,5 +5,6 @@
     <h2>Форма для реєстрації</h2>
     <hr>
     {% include "@FOSUser/Registration/register_content.html.twig" %}
-    <a href="{{ url("hwi_oauth_service_redirect", {service: "facebook"}) }}">Login with Facebook</a>
+    <br>
+    <a href="{{ path("hwi_oauth_service_redirect", {service: "facebook"}) }}">Login with Facebook</a>
 {% endblock fos_user_content %}
